# ae-plugins

./: README.md
AEGP/test_plugin/: Server.cpp  Server.hpp  data.json  spline_multiple.json  spline_track.json  test.cpp  test.h  test_Strings.cpp  test_Strings.hpp  tinyfiledialogs.h
AEGP/test_plugin/Mac/: test.plugin-Info.plist
AEGP/test_plugin/Mac/test.xcodeproj/: project.pbxproj
AEGP/test_plugin/Mac/test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AEGP/test_plugin/Mac/test.xcodeproj/xcshareddata/xcschemes/: Shade.xcscheme
AEGP/test_plugin/Win/: Shade.sln  Shade.vcxproj  ShadePiPL.r
AEGP/test_plugin/testing/: CMakeLists.txt  Server.cpp  Server.h  client.py  main.cpp
AfterEffectsSDK/Examples/AEGP/IO/Mac/IO.xcodeproj/: project.pbxproj
AfterEffectsSDK/Examples/AEGP/Mangler/Mac/Mangler.xcodeproj/: project.pbxproj
AfterEffectsSDK/Examples/AEGP/Streamie/: Streamie.cpp
AfterEffectsSDK/Examples/Buildall.xcodeproj/: project.pbxproj
AfterEffectsSDK/Examples/Buildall.xcodeproj/xcshareddata/xcschemes/: Build_em_all.xcscheme  Shade.xcscheme
AfterEffectsSDK/Examples/Effect/Convolutrix/: Convolutrix.cpp
AfterEffectsSDK/Examples/Template/Skeleton/: Skeleton.cpp
GP/EMP/Mac/EMP.xcodeproj/: project.pbxproj
Template/Shade/: GP_Vers.h  Shade.cpp  Shade.h  ShadePiPL.r  Shade_Strings.cpp  Shade_Strings.h
Template/Shade/Mac/: Shade.plugin-Info.plist
Template/Shade/Mac/Shade.xcodeproj/: project.pbxproj
Template/Shade/Mac/Shade.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
(+323 files in other folders)
